--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,10 @@
 
   <body>
     <%= yield %>
+    <%= flash.each do |key, message| %>
+      <div class = "text-center alert alert-<%= key == notice ? 'success' : 'danger' %>">
+        <%= message %>
+      </div>
+    <% end %>
   </body>
 </html>
