--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,6 +2,25 @@
 <div class = "row">
   <div class = "col-md-12">
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+      <% if @article.errors.any? %>
+        <div class = "alert alert-danger col-md-offset-1">
+          <div class = "alert-heading">
+            <h5 class = "panel-title">
+              <%= pluralize(@article.errors.count, "error") %>
+              prohibited this article from being saved:
+            </h5>
+          </div>
+          <div class = "panel-body">
+            <ul>
+              <% @article.errors.full_messages.each do |msg| %>
+                <li>
+                 <%= msg %>
+                </li>
+                <% end %>
+            </ul>
+          </div>
+        </div>
+      <% end %>
       <div class = "form-group">
         <div class = "control-label col-md-1">
           <%= f.label :title %>
