--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,3 +3,48 @@
   	*= require_tree .
  	*= require_self
 */
+
+body {
+  background: #e1e1e1;
+  color: #64103f;
+}
+
+.navbar {
+  background: #64103f;
+  padding-bottom: 20px;
+}
+
+.navbar-default .navbar-brand .navbar-link {
+  padding-top: 25px;
+  font-size: 150%;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: #ff0000;
+}
+
+.navbar-default {
+  border: #64103f;
+}
+
+.navbar-nav {
+  padding-top: 10px;
+  padding-right: 20px;
+}
+
+.navbar-default .navbar-nav li > a {
+  font-weight: bold;
+  font-size: 130%;
+  color: #ffffff;
+}
+
+.navbar-default .navbar-nav li > a:hover {
+  color: #ff0000;
+}
+
+.page-heading,
+div > label {
+  color: #64103f;
+}
