--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,34 +10,34 @@
   </head>
 
   <body>
-  <header role="banner">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><%= link_to "Blog App", root_path, class: "navbar-brand" %></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="<%#= authors_path %>">Authors</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-  </header>
-  <div class="container"> 
-    <div class="row">
-    <div class="col-md-12">
-        <% flash.each do |key, message| %>
-          <div class = "text-center alert alert-<%= key == notice ? 'success' : 'danger' %>">
-            <%= message %>
+    <header role="banner" class = "mb-3">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><%= link_to "Blog App", root_path, class: "navbar-brand" %></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="<%#= authors_path %>">Authors</a>
+              </li>
+            </ul>
           </div>
-        <% end %>
-        <%= yield %>
+        </div>
+      </nav>
+    </header>
+    <div class="container"> 
+      <div class="row">
+      <div class="col-md-12">
+          <% flash.each do |key, message| %>
+            <div class = "text-center alert alert-<%= key == notice ? 'success' : 'danger' %>">
+              <%= message %>
+            </div>
+          <% end %>
+          <%= yield %>
+        </div>
       </div>
     </div>
-  </div>
   </body>
 </html>
