--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,3 +48,26 @@ body {
 div > label {
   color: #64103f;
 }
+
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-bottom: 0.4em;
+  padding-left: 0.3em;
+}
+
+.article-body {
+  font-size: 1em;
+  padding-left: 1.2em;
+  color: #64103f;
+}
+
+.author {
+  color: #64103f;
+  padding-left: 25px;
+}
+
+.article-detail {
+  margin-top: 20px;
+  color: #0000ff;
+}
