--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,48 +10,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">BlogApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <%#= link_to "Authors", authors_path %>
-            </li>
-            <% unless user_signed_in? %>
-              <li class="nav-item">
-                <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
-              </li>
-            <% end %>
-            <% if user_signed_in? %>
-              <p class = "navbar text">
-                Signed in as <%= "#{current_user.email}" %>
-              </p>
-              <li class="nav-item">
-                <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-              </li>
-              <% end %>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="container"> 
-      <div class="row">
-      <div class="col-md-12">
-          <% flash.each do |key, message| %>
-            <div class = "text-center alert alert-<%= key == notice ? 'success' : 'danger' %>">
-              <%= message %>
-            </div>
-          <% end %>
-          <%= yield %>
-        </div>
-      </div>
-    </div>
+    <%= render 'shared/header'
+    <%= render 'shared/main'
   </body>
 </html>
