--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,14 +10,6 @@
           <li class="nav-item">
             <%#= link_to "Authors", authors_path %>
           </li>
-          <% unless user_signed_in? %>
-            <li class="nav-item">
-              <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
-            </li>
-          <% end %>
           <% if user_signed_in? %>
             <p class = "navbar text">
               Signed in as <%= "#{current_user.email}" %>
@@ -25,7 +17,14 @@
             <li class="nav-item">
               <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
             </li>
-            <% end %>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+            </li>
+          <% end %>
         </ul>
       </div>
     </div>
